Bug 1709374 - Make the check for canceling overscroll after a scroll offset reclamp more precise. r=hiro

Differential Revision: https://phabricator.services.mozilla.com/D114798