gfx/layers/apz/src/AsyncPanZoomController.h
@@ -1677,6 +1677,10 @@ class AsyncPanZoomController {
 
   bool IsOverscrolled() const;
 
+ private:
+  bool IsInInvalidOverscroll() const;
+
+ public:
   bool IsInPanningState() const;
 
  private:
